# Frame-Processor

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  format.sh
config/: config.json  fp.env
deploy/: compose.yml
src/components/config_manager/: config_manager.cpp  config_manager.h
src/components/publisher/: publisher.cpp  publisher.h
src/components/stream_io/: stream_io_manager.cpp  stream_io_manager.h
src/components/worker/: worker.cpp  worker.h
src/core/: main.cpp
src/utils/: fifo.h  frame_saver.cpp  frame_saver.h  logger.cpp  logger.h  redis_client.h  types.cpp  types.h
